# ai_dev

./: .gitattributes  AGENTS.md  CLAUDE.md  install_claude_assets.py  justfile  justfile.local  package.json  pyproject-docstrings.snippet.toml  pyproject.toml  ruff.toml  type-placement-rules.md
.agent/.velocai/: implementation.md  plan.md
.claude/rules/: adr-pipeline.md  concept-docs.md  configuration.md  python-style.md  reference-docs.md  task-runner.md  universal.md  velocai-artifacts.md
.github/: copilot-instructions.md
.github/instructions/: adr-pipeline.instructions.md  concept-docs.instructions.md  configuration.instructions.md  python-docstrings.instructions.md  python-style.instructions.md  reference-docs.instructions.md  task-runner.instructions.md  velocai-artifacts.instructions.md
.github/prompts/: create-copilot-instructions.md  docstring-sweep.prompt.md  new-adr.prompt.md  scaffold-fastapi-layer.prompt.md
.velocai/schemas/: CONTRACT.schema.json
.velocai/templates/: CONCEPT.md  CONTRACT.yaml
agents/: architect.agent.md  curator.md  debugger.md  implementer.md  migrator.md  planner.md  researcher.md  reviewer.md  spec-reviewer.md  tester.md
config/: app.yaml
docs/: BACKLOG.md  architecture.md  asr-plan.md  manifest.md
docs/adrs/: 0001-python-docstring-policy.md  adr-0001-python-docstring-policy.md  adr-0002-reference-documentation.md  adr-0003-import-contract-enforcement.md  adr-0004-no-constitution-file.md  adr-0005-adrs-are-the-source-of-truth-after-projection.md  adr-import-contract-enforcement.md  (+19 more)
tests/: test_scaffolder_contract.py
(+97 files in other folders)
