[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_dev"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12,<3",
    "PyYAML>=6.0,<7",
    "rust-just",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
